# bass-calc

./: .gitignore  Readme.md  bass_calc.py  file_utils.py  graphics.py  parameters.py  parse_params.py  pr.py  requirements.txt  test.bass  util.py
bass-calc-rust/: Cargo.toml
bass-calc-rust/resources/presets/: defaults.bass
bass-calc-rust/src/: graphics.rs  main.rs  parameters.rs
bass-calc-rust/src/functions/: graph_fns.rs  mod.rs  validate_fns.rs
bass-calc-rust/src/graphics/: app.rs  bass_graph.rs  graph_fns.rs  mod.rs
bass-calc-rust/src/parameters/: defaults.rs  mod.rs  params.rs
calc/: parameters.py
gui/: controller.py  graphics.py
reference/param_info_170829.rtfd/: TXT.rtf
save_files/: defaults.bass  test.bass
