[package]
name = "bass-calc-rust"
version = "0.1.0"
authors = ["Sam Pullman <sampullman@gmail.com>"]

[dependencies]
num-complex = "0.2"
find_folder = "0.3.0"
csv = "1.0.0"
num = "0.1.30"
uom = "0.18.0"
conrod_derive = "0.1"
glium = { version = "0.21", optional = true }
winit = { version = "0.12", optional = true }

[dependencies.conrod]
version = "0.60.0"
features = ["glium", "winit"]

[features]
piston = ["glium", "winit"]
